--- a/OneBlock.csproj
+++ b/OneBlock.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenMiNET.OpenAPI" Version="1.0.117" />
+  </ItemGroup>
+
 </Project>
